--- a/multiplayer_shooter.html
+++ b/multiplayer_shooter.html
@@ -402,7 +402,7 @@
         }
 
         .modal-content {
-            background-color: var(--modal-bg);
+            background-color: rgb(20 20 30 / 0%);
             margin: auto;
             padding: 35px; /* More padding */
             border: 1px solid var(--border-color);
