--- a/multiplayer_shooter.html
+++ b/multiplayer_shooter.html
@@ -379,9 +379,9 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5), inset 0 1px 3px rgba(0, 0, 0, 0.3);
         }
         #shootButton:hover {
-            background: linear-gradient(180deg, #228b22 0%, #1a6b1a 100%);
+            background: linear-gradient(180deg, #8b222296 0%, #6b1a1abf 100%);
             transform: translateY(-3px);
-            box-shadow: 0 10px 25px rgba(50, 205, 50, 0.6), inset 0 1px 0 rgba(255, 255, 255, 0.2);
+            box-shadow: 0 10px 25px rgb(222 45 45 / 60%), inset 0 1px 0 rgba(255, 255, 255, 0.2);
         }
 
         /* Modal / Settings Panel */
